<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Store</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_edit_book">Delete All Books</string>

    <string name="editor_activity_title_new_book">Add a book to inventory</string>
    <string name="action_save">Save</string>

    <string name="editor_activity_title_edit_book">Edit book details</string>
    <string name="editor_update_book_successful">Book details updated</string>
    <string name="editor_update_book_failed">Error with updating book details</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_delete">Delete</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_book_price">Book Price</string>
    <string name="hint_book_quantity">Book Quantity</string>
    <string name="hint_book_supplier">Supplier Name</string>
    <string name="hint_book_supplier_phone">Supplier Phone</string>

    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">One or more fields are not filled</string>

    <string name="empty_view_title_text">No books in the inventory.</string>
    <string name="empty_view_subtitle_text">Populate the inventory by adding a book below.</string>
</resources>
