<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />
        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <!-- Book name field -->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                app:backgroundTint="@color/editorColorAccent" />
            <!-- Book price field -->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                app:backgroundTint="@color/editorColorAccent" />
            <!-- Book quantity field -->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number"
                app:backgroundTint="@color/editorColorAccent" />
            <!-- Book supplier field -->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_book_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords"
                app:backgroundTint="@color/editorColorAccent" />
            <!-- Book supplier phone field -->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_book_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="phone"
                app:backgroundTint="@color/editorColorAccent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>